:+1: スライドテンプレートと複数行対応

--- a/front/src/styles/Home.module.css
+++ b/front/src/styles/Home.module.css
@@ -20,12 +20,13 @@
   text-align: center;
 }
 
-.forms input[type='text'] {
+.textArea {
   padding: .5rem;
   margin-bottom: .5rem;
   font-size: 1.5rem;
   width: 100%;
   border: 1.5px solid black;
+  resize: none;
 }
 
 .forms span {
