--- a/front/src/styles/Share.module.css
+++ b/front/src/styles/Share.module.css
@@ -4,6 +4,11 @@
   min-height: 100vh;
   margin: 0 auto;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .img {
@@ -12,31 +17,32 @@
 }
 
 .share {
-  margin: 2rem auto;
+  padding: 0 .5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.twBtn {
+.btn {
   padding: 1rem;
+  margin: .5rem 0;
   font-weight: bold;
   font-size: 1.5rem;
-  background-color: #00acee;
   color: #fff;
   text-decoration: none;
   border-style: none;
   border-radius: 5px;
 }
 
-.twBtn:hover {
+.btn:hover {
   opacity: 0.6;
   color: #fff;
 }
 
-@media (min-width: 480px) {
-  .container {
-    display: flex;
-    justify-content: center;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
+.twBtn {
+  background-color: #00acee;
+}
+
+.topBtn {
+  background-color: #0e7a00;
 }
